# fireplace

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  fireplace.service  flake8.cfg  install_service.sh  launcher.sh  pyproject.toml  send_files.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
docker/: README.md
docs/: noise.ipynb
fireplace/: __init__.py  api.py  controller.py  main.py
fireplace/audio/: audio_tools.py  play_audio.py
fireplace/data/perlin_noise/: noise_0.npy  noise_1.npy  noise_2.npy  noise_3.npy  noise_4.npy  noise_5.npy
fireplace/lights/: animations.py  generate_noise_files.py  led_comms.py  led_test.py  noise.ipynb  noise.py  noise_test.py  play_fire.py  utils.py
fireplace/rotary_encoder/: rotary.py  rotary_test.py
fireplace/tests/: noise.ipynb
tests/: audio_test.py  leds_test.py
tests/test_example/: test_hello.py
