[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fireplace"
version = "1.0.0"
description = "Fireplace is a Python package to run a fireplace animation in a Raspberry Pi Zero W2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "peinador" }]
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "click>=8.0.0",
  "numpy>=1.26.4",
  "matplotlib>=3.8.3",
]

[project.urls]
Homepage = "https://github.com/peinador/fireplace"
Repository = "https://github.com/peinador/fireplace"

[dependency-groups]
dev = [
  "bandit>=1.7.1",
  "black>=23.9.1",
  "darglint>=1.8.1",
  "flake8>=7.0.0",
  "isort[colors]>=5.10.1",
  "mypy>=0.910",
  "mypy-extensions>=0.4.3",
  "pre-commit>=2.15.0",
  "pylint>=2.11.1",
  "pytest>=6.2.5",
]

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 88
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = "3.9"
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs = [
  "hooks",
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__",
]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[tool.coverage.paths]
source = ["fireplace"]

[tool.coverage.report]
fail_under = 50
show_missing = true
