[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fireplace"
version = "1.0.0"
description = "Fireplace is a Python package to run a fireplace animation in a Raspberry Pi Zero W"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "peinador" }]
keywords = []
dependencies = [
  "numpy>=1.26.4",
]

[project.urls]
Homepage = "https://github.com/peinador/fireplace"
Repository = "https://github.com/peinador/fireplace"

[project.optional-dependencies]
notebook = [
  "matplotlib>=3.8.3",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
  "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "C901",   # too complex
  "F401",   # unused imports in __init__.py
  "F405",   # name may be undefined from star imports
  "F403",   # star imports
  "E402",   # module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["fireplace"]

[tool.pytest.ini_options]
norecursedirs = [
  "hooks",
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__",
]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[tool.coverage.paths]
source = ["fireplace"]

[tool.coverage.report]
fail_under = 50
show_missing = true
